# Inleiding-Modelleren-en-Simuleren

Assignment1/: .ass1.c.swp  .gitignore  ass1  ass1.c  ass1_Becht_deJonge.c  ranges.h  speedtest.c
Assignment2/: CMakeLists.txt  ass2.cpp  derivative.cpp  derivative.h  integrals.cpp  integrals.h  integration_functions.h  plot_convergence.py  x_intersection.cpp  x_intersection.h
Assignment3/: .gitignore  CMakeLists.txt  Makefile  differentials.c  differentials.cpp  differentials.h  malaria.c  params  tests.c  tests.cpp
Assignment3/human_resilience/: initial  params
ForestFire/: .gitignore  Makefile  README  Simulation.cpp  Simulation.h  SimulationField.cpp  SimulationField.h  data_visualisation.py  report.tex  simulation.py  test.cpp  test_graphical.cpp  test_sdl.cpp
Malaria/: 3d_plot.py  README  lines2d_demo.py  lines3d_demo.py  malaria_simulation.py  plot.py
Malaria/Higher_Deathrate/human_density:0.5|human_susceptible:0.8|mosquito_density:0.5|mosquito_susceptible:0.8/: 0_time.csv  10_time.csv  11_time.csv  12_time.csv  13_time.csv  14_time.csv  15_time.csv  16_time.csv  17_time.csv  18_time.csv  19_time.csv  1_time.csv  20_time.csv  21_time.csv  22_time.csv  23_time.csv  24_time.csv  25_time.csv  26_time.csv  27_time.csv  28_time.csv  29_time.csv  2_time.csv  30_time.csv  31_time.csv  32_time.csv  33_time.csv  34_time.csv  35_time.csv  36_time.csv  37_time.csv  38_time.csv  39_time.csv  3_time.csv  40_time.csv  41_time.csv  42_time.csv  43_time.csv  44_time.csv  45_time.csv  (+10 more)
Report/: .gitignore
Test/: rk.c
(+10192 files in other folders)
